[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/button_generate_game_idea.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.101961, 0.141176, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.054902, 0.0666667, 0.101961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.133333, 0.145098, 0.192157, 1 )

[node name="Node2D" type="Node2D"]

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 248.0
margin_right = 249.0
margin_bottom = 278.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Generate new game idea"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Genre" type="Label" parent="Button"]
margin_left = -59.0
margin_top = -188.0
margin_right = 261.0
margin_bottom = -156.0
text = "GENRE"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dimension" type="Label" parent="Button"]
margin_left = -59.0
margin_top = -128.0
margin_right = 261.0
margin_bottom = -96.0
text = "DIMENSION"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Requirement" type="Label" parent="Button"]
margin_left = -59.0
margin_top = -68.0
margin_right = 261.0
margin_bottom = -36.0
text = "requirement"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiple Genres" type="CheckBox" parent="Button"]
margin_left = -59.0
margin_top = -248.0
margin_right = 27.0
margin_bottom = -224.0
text = "2x Genre"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiple Requirments" type="CheckBox" parent="Button"]
margin_left = 40.0
margin_top = -248.0
margin_right = 169.0
margin_bottom = -224.0
text = "2x Requirments"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No 25D" type="CheckBox" parent="Button"]
margin_left = 180.0
margin_top = -248.0
margin_right = 260.0
margin_bottom = -224.0
text = "No 2.5D"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]
[connection signal="toggled" from="Button/Multiple Genres" to="Button" method="_on_Multiple_Genres_toggled"]
[connection signal="toggled" from="Button/Multiple Requirments" to="Button" method="_on_Multiple_Requirments_toggled"]
[connection signal="toggled" from="Button/No 25D" to="Button" method="_on_No_25D_toggled"]
